src/App.css
.time-indicator {
  font-size: 3rem;
}

.Day {
  background-color: white;
}

.Day h1, .Day p, .Day .control i{
  color: black;
}

.Night {
  background-color: #4a4a4a;
}

.Night h1, .Night p, .Night .control i{
  color: white;
}

@media (min-width: 576px) {
  .time-indicator {
    font-size: 5rem;
  }
}

